[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/DockInfo.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/Box.png" type="Texture" id=2]
[ext_resource path="res://scripts/DFT.gd" type="Script" id=3]
[ext_resource path="res://fonts/ubunt32.fnt" type="Font" id=4]
[ext_resource path="res://scripts/DFP.gd" type="Script" id=5]
[ext_resource path="res://scripts/DFPk.gd" type="Script" id=6]
[ext_resource path="res://scripts/DFPos.gd" type="Script" id=7]
[ext_resource path="res://sprites/ui/hud_x35.png" type="Texture" id=8]

[node name="InfoBox" type="Node2D"]

visibility/opacity = 0.7
transform/pos = Vector2( -17.2577, -16.6993 )
transform/scale = Vector2( 0.460697, 0.478146 )
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="Box" type="Sprite" parent="."]

transform/pos = Vector2( 57.3224, 18.7541 )
transform/scale = Vector2( 0.877833, 0.784377 )
texture = ExtResource( 2 )

[node name="Node2T" type="Node2D" parent="."]

transform/pos = Vector2( -190.267, -238.417 )
z/z = 2
script/script = ExtResource( 3 )
__meta__ = { "_edit_group_":true }

[node name="LabelT" type="Label" parent="Node2T"]

margin/left = 3.0
margin/right = 174.0
margin/bottom = 30.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Tarcie:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelTW" type="Label" parent="Node2T"]

margin/left = 31.0
margin/top = 33.0
margin/right = 240.0
margin/bottom = 63.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "T = f * M"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelTR" type="Label" parent="Node2T"]

margin/left = 33.0
margin/top = 65.0
margin/right = 242.0
margin/bottom = 95.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Wynik:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEdit" type="LineEdit" parent="Node2T"]

margin/left = 160.0
margin/top = 65.0
margin/right = 558.0
margin/bottom = 105.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "T = f * M"
max_length = 0
editable = true
secret = false

[node name="Node2P" type="Node2D" parent="."]

transform/pos = Vector2( -245.377, -122.278 )
z/z = 2
script/script = ExtResource( 5 )
__meta__ = { "_edit_group_":true, "_editor_collapsed":true }

[node name="LabelT" type="Label" parent="Node2P"]

margin/left = 3.0
margin/right = 174.0
margin/bottom = 30.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Prędkość:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelTW" type="Label" parent="Node2P"]

margin/left = 31.0
margin/top = 33.0
margin/right = 240.0
margin/bottom = 63.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "v = przemieszcznie / czas"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelTR" type="Label" parent="Node2P"]

margin/left = 32.0
margin/top = 72.0
margin/right = 241.0
margin/bottom = 102.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "X:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelTR1" type="Label" parent="Node2P"]

margin/left = 32.0
margin/top = 117.0
margin/right = 241.0
margin/bottom = 147.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Y:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEditX" type="LineEdit" parent="Node2P"]

margin/left = 79.0
margin/top = 65.0
margin/right = 616.0
margin/bottom = 105.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "v = przemiescznie / czas"
max_length = 0
editable = true
secret = false

[node name="LineEditY" type="LineEdit" parent="Node2P"]

margin/left = 79.0
margin/top = 111.0
margin/right = 616.0
margin/bottom = 151.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "v = przemiescznie / czas"
max_length = 0
editable = true
secret = false

[node name="Node2PK" type="Node2D" parent="."]

transform/pos = Vector2( -239.238, 51.316 )
z/z = 2
script/script = ExtResource( 6 )
__meta__ = { "_edit_group_":true, "_editor_collapsed":true }

[node name="LabelT" type="Label" parent="Node2PK"]

margin/left = 3.0
margin/right = 174.0
margin/bottom = 30.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Prędkość Kątowa:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelTW" type="Label" parent="Node2PK"]

margin/left = 31.0
margin/top = 33.0
margin/right = 240.0
margin/bottom = 63.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "w = kąt/czas"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelTR" type="Label" parent="Node2PK"]

margin/left = 33.0
margin/top = 70.0
margin/right = 242.0
margin/bottom = 100.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Wynik:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LinE" type="LineEdit" parent="Node2PK"]

margin/left = 160.0
margin/top = 65.0
margin/right = 619.0
margin/bottom = 105.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "w = kąt / czas"
max_length = 0
editable = true
secret = false

[node name="Node2Pos" type="Node2D" parent="."]

transform/pos = Vector2( -140.416, 172.951 )
z/z = 2
script/script = ExtResource( 7 )
__meta__ = { "_edit_group_":true, "_editor_collapsed":true }

[node name="LabelT" type="Label" parent="Node2Pos"]

margin/left = 3.0
margin/right = 174.0
margin/bottom = 30.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Położenie:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelTW" type="Label" parent="Node2Pos"]

margin/left = 31.0
margin/top = 33.0
margin/right = 240.0
margin/bottom = 63.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "X:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelTW1" type="Label" parent="Node2Pos"]

margin/left = 31.0
margin/top = 75.0
margin/right = 240.0
margin/bottom = 105.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Y:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LinEX" type="LineEdit" parent="Node2Pos"]

margin/left = 75.0
margin/top = 75.0
margin/right = 313.0
margin/bottom = 115.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "0"
max_length = 0
editable = true
secret = false

[node name="LinEY" type="LineEdit" parent="Node2Pos"]

margin/left = 75.0
margin/top = 32.0
margin/right = 284.0
margin/bottom = 62.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "0"
max_length = 0
editable = true
secret = false

[node name="Button" type="Button" parent="."]

margin/left = 296.0
margin/top = -250.0
margin/right = 347.0
margin/bottom = -202.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
icon = ExtResource( 8 )
flat = false

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


